# labs_oop_kovalev

./: README.md
laba_1/: CMakeLists.txt  README.md
laba_1/include/: pure_num.h
laba_1/src/: main.cpp  pure_num.cpp
laba_1/tests/: pure_num_test.cpp
